--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ ehthumbs.db
 Desktop.ini
 .settings/*
 .classpath
+.idea
 .project
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
@@ -28,7 +29,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
