--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <!-- Logging -->
         <logback.version>1.0.13</logback.version>
         <slf4j.version>1.7.5</slf4j.version>
+        <mysql.version>5.1.26</mysql.version>
     </properties>
     <dependencies>
         <dependency>
@@ -136,6 +137,17 @@
             <groupId>cn.org.springside</groupId>
             <artifactId>springside-redis</artifactId>
             <version>4.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.14.8</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
