更改pom项目名 用intellij来写博文试试

--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.roytrack</groupId>
-    <artifactId>learnMybatis</artifactId>
+    <artifactId>learn</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>learnMybatis Maven Webapp</name>
+    <name>learn Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
     <properties>
