--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>proxool</groupId>
+            <artifactId>proxool</artifactId>
+            <version>0.8.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.14.8</version>
