--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>2.7.6</version>
+        </dependency>
         <!-- Logging -->
         <!-- LOGGING begin -->
         <!-- slf4j -->
