--- a/pom.xml
+++ b/pom.xml
@@ -218,6 +218,11 @@
             <version>1.14.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.4</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>learnMybatis</finalName>
