--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>corejava</module>
         <module>spring</module>
         <module>springmvcsample1</module>
+        <module>tiles</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
