--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,11 @@
             <artifactId>spring-security-web</artifactId>
             <version>3.2.5.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
@@ -190,6 +194,11 @@
         <dependency>
             <groupId>cn.org.springside</groupId>
             <artifactId>springside-redis</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.org.springside</groupId>
+            <artifactId>springside-utils</artifactId>
             <version>4.3.0-SNAPSHOT</version>
         </dependency>
         <dependency>
