--- a/maven_prop/pom.xml
+++ b/maven_prop/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>corejava</artifactId>
+        <artifactId>learn</artifactId>
         <groupId>com.roytrack</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../corejava/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
