--- a/mavenInAction/src/main/resources/account-email.properties
+++ b/mavenInAction/src/main/resources/account-email.properties
@@ -1,6 +1,6 @@
 email.protocol=smtps
 email.host=smtp.163.com
-email.port=
+email.port=465
 email.username=maveninaction@163.com
 email.password=maven123
 email.auth=true
