--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.2.8</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.1.0</version>
+        </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
