--- a/corejava/pom.xml
+++ b/corejava/pom.xml
@@ -10,6 +10,9 @@
     <packaging>pom</packaging>
     <name>core java test</name>
     <url>http://roytrack.com</url>
+    <properties>
+        <old.jackson>1.9.13</old.jackson>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -79,6 +82,18 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
     </dependencies>
 </project>
