--- a/mavenInAction/pom.xml
+++ b/mavenInAction/pom.xml
@@ -10,29 +10,22 @@
     <modelVersion>4.0.0</modelVersion>
     <name>demo for maven in action</name>
     <artifactId>mavenInAction</artifactId>
-    <properties>
-        <springs.version>2.5.6</springs.version>
-    </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>${springs.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${springs.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-context</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>${springs.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
-            <version>${springs.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
