--- a/springmvcsample1/pom.xml
+++ b/springmvcsample1/pom.xml
@@ -189,6 +189,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>springmvcsample1</finalName>
