--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ jdk:
 install: /bin/true
 
 script:
+  -mvn install:install-file -Dfile=/home/travis/build/roytrack/sample/spring/src/data/jar/ojdbc14.jar -DgroupId=com.oracle -DartifactId=ojdbc14 -Dversion=10.0 -Dpackaging=jar
   - mvn install -Dmaven.test.skip=false
   - mvn clean
