maven.test.skip set to true

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install: /bin/true
 
 script:
   - mvn install:install-file -Dfile=/home/travis/build/roytrack/sample/spring/src/data/jar/ojdbc14.jar -DgroupId=com.oracle -DartifactId=ojdbc14 -Dversion=10.0 -Dpackaging=jar
-  - mvn install -Dmaven.test.skip=false
+  - mvn install -Dmaven.test.skip=true
   - mvn clean
