--- a/corejava/pom.xml
+++ b/corejava/pom.xml
@@ -10,6 +10,9 @@
     <packaging>pom</packaging>
     <name>core java test</name>
     <url>http://roytrack.com</url>
+    <modules>
+        <module>../pythoncode</module>
+    </modules>
     <properties>
         <old.jackson>1.9.13</old.jackson>
     </properties>
