--- a/corejava/pom.xml
+++ b/corejava/pom.xml
@@ -10,12 +10,42 @@
     <packaging>pom</packaging>
     <name>core java test</name>
     <url>http://roytrack.com</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>1.8</java.version>
+        <!-- 主要依赖库的版本定义 -->
+        <dubbo.version>2.8.3</dubbo.version>
+        <spring.version>3.2.11.RELEASE</spring.version>
+        <mybatis.version>3.2.7</mybatis.version>
+        <mysql.version>5.1.26</mysql.version>
+        <mybatis.spring.version>1.1.0</mybatis.spring.version>
+        <hibernate-validator.version>5.1.2.Final</hibernate-validator.version>
+        <jedis.version>2.5.1</jedis.version>
+        <jackson.version>2.4.4</jackson.version>
+        <guava.version>17.0</guava.version>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
+        <commons-io.version>2.4</commons-io.version>
+        <!-- Logging -->
+        <logback.version>1.0.13</logback.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <log4j_version>1.2.16</log4j_version>
+        <!-- Test -->
+        <testng.version>6.1.1</testng.version>
+        <junit.version>4.11</junit.version>
+        <assertj.version>1.6.1</assertj.version>
+        <zookeeper_version>3.3.3</zookeeper_version>
+        <zkclient_version>0.1</zkclient_version>
+        <validation_version>1.0.0.GA</validation_version>
+        <jcache_version>0.4</jcache_version>
+        <old.jackson>1.9.13</old.jackson>
+        <checkstyle.config.location>config/maven_checks.xml</checkstyle.config.location>
+    </properties>
     <modules>
         <module>../pythoncode</module>
     </modules>
-    <properties>
-        <old.jackson>1.9.13</old.jackson>
-    </properties>
+
     <dependencies>
         <dependency>
             <groupId>commons-fileupload</groupId>
