--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -8,7 +8,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>spring</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <name>spring content</name>
     <url>http://roytrack.com</url>
