kryo的结果 注意 要使用writeObjectAndClass

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>pythoncode</module>
         <module>roypay</module>
         <module>springmvcsample1</module>
+        <module>kryo</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
