--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>netty</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>netty test</name>
     <url>http://roytrack.com</url>
     <dependencies>
