--- a/kryo/pom.xml
+++ b/kryo/pom.xml
@@ -64,6 +64,11 @@
         <version>${logback.version}</version>
         <scope>runtime</scope>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-redis</artifactId>
+        <version>1.6.0.RELEASE</version>
+    </dependency>
 </dependencies>
 
 </project>
