--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>springmvcsample1</module>
         <module>kryo</module>
         <module>mybatis</module>
+        <module>httpclient</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
