--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -6,26 +6,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>httpclient</artifactId>
+    <artifactId>redis</artifactId>
     <packaging>war</packaging>
-    <name>httpclient Maven Webapp</name>
+    <name>redis Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <dependencies>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.4</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpasyncclient</artifactId>
-            <version>4.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.4</version>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -34,6 +19,6 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>httpclient</finalName>
+        <finalName>redis</finalName>
     </build>
 </project>
