test preparedStatement to avoid special symbol

--- a/mybatis/src/main/resources/jdbc.properties
+++ b/mybatis/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-boo.url=jdbc\:mysql\://localhost\:3306/abc?zeroDateTimeBehavior\=round&useUnicode\=true&characterEncoding\=UTF-8
+boo.url=jdbc\:mysql\://localhost\:3306/roy?zeroDateTimeBehavior\=round&useUnicode\=true&characterEncoding\=UTF-8
 foo.url=jdbc\:mysql\://localhost\:3306/test2?zeroDateTimeBehavior\=round&useUnicode\=true&characterEncoding\=UTF-8
 mysql.username=root
 mysql.password=12qwaszx
