--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.0.31.Final</version>
+            <version>5.0.0.Alpha1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
