--- a/pom.xml
+++ b/pom.xml
@@ -315,7 +315,11 @@
                 </exclusions>
             </dependency>
             <!--java ee  jsp servlet end-->
-
+            <dependency>
+                <groupId>org.tautua.markdownpapers</groupId>
+                <artifactId>markdownpapers-core</artifactId>
+                <version>1.4.1</version>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
