--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -75,6 +75,18 @@
             <version>5.1.26</version>
         </dependency>
         <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.18.2-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>com.roytrack</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/mybatis_plus.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc14</artifactId>
             <version>10.0</version>
