--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>spring</artifactId>
+        <artifactId>learn</artifactId>
         <groupId>com.roytrack</groupId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../spring/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mybatis</artifactId>
