netty chapter 9 marshall demo

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <module>redis</module>
         <module>elasticsearch</module>
         <module>disruptor</module>
+        <module>log</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
