change to netty 4.1.9.Final

--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -15,8 +15,8 @@
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1</version>
+            <artifactId>netty-parent</artifactId>
+            <version>4.1.9.Final</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
