--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <module>elasticsearch</module>
         <module>disruptor</module>
         <module>mq</module>
+        <module>qrcode</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
