vertx websocket write queue full handle

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <module>disruptor</module>
         <module>mq</module>
         <module>qrcode</module>
+        <module>vertx</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
