--- a/vertx/pom.xml
+++ b/vertx/pom.xml
@@ -94,6 +94,11 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
