add http request use tcp socket

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <module>qrcode</module>
         <module>vertx</module>
         <module>hazelcast</module>
+        <module>net</module>
     </modules>
     <properties>
         <spring.version>4.1.4.RELEASE</spring.version>
