add a demo for map interceptor

--- a/hazelcast/pom.xml
+++ b/hazelcast/pom.xml
@@ -23,6 +23,13 @@
             <artifactId>hazelcast-all</artifactId>
             <version>3.10.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
     </dependencies>
+
 
 </project>
